# qrcards

./: addresses.yml  pyproject.toml  readme.md
src/qrcards/: __init__.py  generate.py  web.py
src/qrcards/templates/: index.html
