[project]
name = "qrcards"
version = "0.1.0"
description = "Create QR Codes for Visiting Cards"
authors = [
    { name = "Geordee Naliyath", email = "geordee@gmail.com" }
]
dependencies = [
    "segno>=1.6.1",
    "pyyaml>=6.0.1",
    "flask>=3.0.2",
]
readme = "readme.md"
requires-python = ">= 3.8"

[project.scripts]
web = "qrcards:web"
generate = "qrcards:generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qrcards"]
